@@ -183,9 +183,6 @@
     <ClCompile Include="gdihndl.c">
       <Filter>Process Hacker</Filter>
     </ClCompile>
-    <ClCompile Include="heapinfo.c">
-      <Filter>Process Hacker</Filter>
-    </ClCompile>
     <ClCompile Include="hidnproc.c">
       <Filter>Process Hacker</Filter>
     </ClCompile>
@@ -555,6 +552,9 @@
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="include\notifico.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="include\heapstruct.h">
       <Filter>Headers</Filter>
     </ClInclude>
   </ItemGroup>
